--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
 # Application Port
-server.port=8080
+server.port=8081
+department-service.url=http://localhost:8082
 
 
